tests/invalid/random_choices_missing_weights_keyword/main.py
import random

if __name__ == "__main__":
    xs: list[int] = random.choices([1, 2, 3])
